# ralph-cli

./: .gitignore  ADVANCED.md  AGENTS.md  Cargo.toml  LICENSE  README.md  install  ralph-workflow-prd.md  test.sh  to-exp-branch.sh
.cargo/: config.toml
.github/workflows/: build-binaries.yml
crates/ralph-app/: Cargo.toml
crates/ralph-app/src/: console.rs  engine.rs  interactive.rs  lib.rs  prompt.rs  prompt_run.rs  run.rs  template.rs  workflow.rs  workflow_run.rs
crates/ralph-app/src/builtin_assets/flows/: plan_driven.toml  task_driven.toml
crates/ralph-app/src/builtin_assets/prompts/plan_driven/: build.md  rebase.md
crates/ralph-app/src/builtin_assets/prompts/task_driven/: build.md  goal_interview.md  rebase.md
crates/ralph-app/src/builtin_assets/workflows/plan_build/: workflow.toml
crates/ralph-app/src/builtin_assets/workflows/plan_build/templates/: 0_plan.md  1_build.md
crates/ralph-app/src/builtin_assets/workflows/plan_driven/: workflow.toml
crates/ralph-app/src/builtin_assets/workflows/plan_driven/templates/: GOAL.md
crates/ralph-app/src/builtin_assets/workflows/single_prompt/: workflow.toml
crates/ralph-app/src/builtin_assets/workflows/single_prompt/templates/: prompt_main.md
crates/ralph-app/src/builtin_assets/workflows/task_driven/: workflow.toml
crates/ralph-app/src/builtin_assets/workflows/task_driven/templates/: progress.toml
crates/ralph-cli/: Cargo.toml
crates/ralph-cli/src/: cli.rs  fake_agent.rs  main.rs  output.rs
crates/ralph-cli/tests/: test_workflow_e2e.rs
crates/ralph-core/: Cargo.toml
crates/ralph-core/src/: agent.rs  agent_events.rs  artifact_templates.rs  atomic.rs  clarification.rs  config.rs  lib.rs  markers.rs  prompts.rs  protocol.rs  scaffold.rs  slug.rs  store.rs  terminal.rs  theme.rs  types.rs  workflow.rs
crates/ralph-core/workflows/: bare.yml  dbv.yml  default.yml  finalize.yml  ipr.yml  pdd.yml  plan-build.yml  plan.yml  review.yml  simple.yml  task-based.yml  task.yml  test-timeout-workflow.yml  test-workflow.yml
crates/ralph-runner/: Cargo.toml
crates/ralph-runner/src/: lib.rs
crates/ralph-tui/: Cargo.toml
crates/ralph-tui/src/: editor.rs  lib.rs  ui.rs  view.rs
docs/: custom-workflows.md  fake-agent.md  minimal-loop-redesign.md
ralph/: progress-brisk-canvas-trail.txt
scripts/: release.sh
