[workspace]
members = [
    "crates/ralph-core",
    "crates/ralph-runner",
    "crates/ralph-app",
    "crates/ralph-cli",
]
resolver = "2"

[workspace.package]
version = "0.5.2"
edition = "2024"
description = "Durable planning and execution workflow for repositories"
documentation = "https://docs.rs/ralph-cli"
homepage = "https://github.com/francescoalemanno/ralph-cli"
repository = "https://github.com/francescoalemanno/ralph-cli"
license = "MIT"
readme = "README.md"
keywords = ["cli", "developer-tools", "planning", "terminal", "workflow"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
camino = { version = "1.2.1", features = ["serde1"] }
clap = { version = "4.5.48", features = ["derive", "env"] }
dirs = "6.0.0"
libc = "0.2.177"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
tempfile = "3.23.0"
termimad = "0.34.1"
time = { version = "0.3.37", features = ["formatting", "local-offset", "macros"] }
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.8.23"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }

[patch.crates-io]
ralph-app = { path = "crates/ralph-app" }
ralph-core = { path = "crates/ralph-core" }
ralph-runner = { path = "crates/ralph-runner" }
