[package]
name = "ralph-app"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
camino.workspace = true
ralph-core = { version = "0.4.4", path = "../ralph-core" }
ralph-runner = { version = "0.4.4", path = "../ralph-runner" }
termimad.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
