[package]
name = "ralph-app"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
camino.workspace = true
ralph-core = { version = "0.5.2", path = "../ralph-core" }
ralph-runner = { version = "0.5.2", path = "../ralph-runner" }
serde_json.workspace = true
termimad.workspace = true
time.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
