[package]
name = "ralph-app"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
camino.workspace = true
ralph-core = { version = "0.5.3", path = "../ralph-core" }
ralph-runner = { version = "0.5.3", path = "../ralph-runner" }
serde_json.workspace = true
similar.workspace = true
tempfile.workspace = true
termimad.workspace = true
time.workspace = true
tokio.workspace = true

[dev-dependencies]
