[package]
name = "ralph-cli"
version.workspace = true
edition.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "ralph"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
camino.workspace = true
clap.workspace = true
ralph-app = { version = "0.1.1", path = "../ralph-app" }
ralph-core = { version = "0.1.1", path = "../ralph-core" }
ralph-tui = { version = "0.1.1", path = "../ralph-tui" }
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
