[package]
name = "ralph-cli"
version.workspace = true
edition.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "ralph"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
camino.workspace = true
clap.workspace = true
ralph-app = { version = "0.5.0", path = "../ralph-app" }
ralph-core = { version = "0.5.0", path = "../ralph-core" }
serde.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
toml.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true
