[package]
name = "ralph-core"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
camino.workspace = true
dirs.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
toml.workspace = true

[dev-dependencies]
insta.workspace = true
proptest.workspace = true
