[package]
name = "ralph-runner"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
camino.workspace = true
ralph-core = { path = "../ralph-core" }
serde_json.workspace = true
tempfile.workspace = true
tokio.workspace = true
tracing.workspace = true
