[package]
name = "ralph-runner"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
camino.workspace = true
libc.workspace = true
ralph-core = { version = "0.3.1", path = "../ralph-core" }
tempfile.workspace = true
tokio.workspace = true
tracing.workspace = true
