[package]
name = "ralph-runner"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
camino.workspace = true
libc.workspace = true
ralph-core = { version = "0.5.3", path = "../ralph-core" }
tokio.workspace = true
tracing.workspace = true
