[package]
name = "ralph-tui"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
camino.workspace = true
crossterm.workspace = true
ratatui.workspace = true
ralph-app = { version = "0.4.3", path = "../ralph-app" }
ralph-core = { version = "0.4.3", path = "../ralph-core" }
ralph-runner = { version = "0.4.3", path = "../ralph-runner" }
syntect.workspace = true
tokio.workspace = true
tui-textarea.workspace = true
unicode-width.workspace = true
textwrap.workspace = true
vt100.workspace = true

[dev-dependencies]
tempfile.workspace = true
